ASP.NET Core 3.1에서 쿠키 인증으로 회원가입, 로그인, 로그아웃, 회원 정보 표시 기능 구현 완료

--- a/DotNetNote/appsettings.json
+++ b/DotNetNote/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=DotNetNoteCookies;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DotNetNoteCookies;Trusted_Connection=True;"
+  },
+  "Data": {
+    "DefaultConnection": {
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=DotNetNoteCookies;Trusted_Connection=True;"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
